--- a/sets/set2/set2_empty.tex
+++ b/sets/set2/set2_empty.tex
@@ -93,6 +93,7 @@ For each loss function/model, plot the data points as a scatter plot and overlay
 What differences do you see in the decision boundaries learned using the different loss functions? Provide a qualitative explanation for this behavior.
 
 \begin{solution}
+  Link: \url{https://colab.research.google.com/drive/1r7B7PM8hozxEy1vvvrfG8GUgO3Vchkly?usp=sharing}
   The figures below were obtained using ridge regression and logistic regression, respectively:
   \begin{figure}[H]
     \subfloat[]{\includegraphics[width=0.49\textwidth]{ridge_P1.pdf}}
@@ -223,6 +224,7 @@ Do the following for both training data sets (wine\_training1.txt and wine\_trai
  You should end up with three plots, with two series (one for wine\_training1.txt and one for wine\_training2.txt) on each plot. Note that the $E_\text{in}$ and $E_\text{out}$ values you plot should not include the regularization penalty --- the penalty is only included when performing gradient descent.
 
 \begin{solution}
+  Link: \url{https://colab.research.google.com/drive/1hQdY20GGnvcu_0edQYeQMpQwINQM7_MC?usp=sharing}
   The following figures were generated:
   \begin{figure}[H]
     \subfloat[]{\includegraphics[width=0.5\textwidth]{E_in_2.pdf}}\\
@@ -295,6 +297,7 @@ What happens to the number of model weights that are exactly zero with Ridge reg
 }
 
 \begin{solution}
+  Link: \url{https://colab.research.google.com/drive/1f_Ao2h1KfK2E4zRx0rvHbgUGKPDk9Wey?usp=sharing}
   \begin{enumerate}
     \item The following plot was generated:
     \begin{figure}[H]
