--- a/sets/set4/set4_prob3.ipynb
+++ b/sets/set4/set4_prob3.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/charlesincharge/Caltech-CS155-2022/blob/main/sets/set4/set4_prob3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "mNDH7qAJQkYz"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "uTdlcHOmQkY3"
       },
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "Y9RlGiKZQkY4",
         "outputId": "537e8faf-ab10-4e74-e013-dab8e812862d"
@@ -118,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 155,
       "metadata": {
         "id": "WA8r-bO7QkY5"
       },
@@ -129,14 +129,16 @@
         "\n",
         "model = nn.Sequential(\n",
         "    nn.Conv2d(1, 8, kernel_size=(3,3)),\n",
+        "    nn.BatchNorm2d(8),\n",
         "    nn.ReLU(),\n",
         "    nn.MaxPool2d(2),\n",
-        "    nn.Dropout(p=0.5),\n",
+        "    nn.Dropout(p=1.0),\n",
         "    \n",
         "    nn.Conv2d(8, 8, kernel_size=(3,3)),\n",
+        "    nn.BatchNorm2d(8),\n",
         "    nn.ReLU(),\n",
         "    nn.MaxPool2d(2),\n",
-        "    nn.Dropout(p=0.5),\n",
+        "    nn.Dropout(p=1.0),\n",
         "    \n",
         "    nn.Flatten(),\n",
         "    nn.Linear(25*8, 64),\n",
@@ -148,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 156,
       "metadata": {
         "id": "vypV9oSRQkY7",
         "outputId": "6639c5f8-0740-4053-fa9b-674db4c164e0"
@@ -160,7 +162,11 @@
           "text": [
             "torch.Size([8, 1, 3, 3])\n",
             "torch.Size([8])\n",
+            "torch.Size([8])\n",
+            "torch.Size([8])\n",
             "torch.Size([8, 8, 3, 3])\n",
+            "torch.Size([8])\n",
+            "torch.Size([8])\n",
             "torch.Size([8])\n",
             "torch.Size([64, 200])\n",
             "torch.Size([64])\n",
@@ -177,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 157,
       "metadata": {
         "id": "3mHMVuwQQkY7",
         "outputId": "f2ec2d12-87f4-4064-ecfc-f6ace501f6e1"
@@ -187,7 +193,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "total params: 14178\n"
+            "total params: 14210\n"
           ]
         }
       ],
@@ -202,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 158,
       "metadata": {
         "id": "uJhWXEQ0QkY8"
       },
@@ -216,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 159,
       "metadata": {
         "id": "w-At3b8DQkY8",
         "outputId": "52722b09-e7e0-4bdc-f3d9-6f093b3e7b1d"
@@ -227,31 +233,14 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10:...........\n",
-            "\tloss: 0.8214, acc: 0.7266, val loss: 0.2571, val acc: 0.9362\n",
-            "Epoch 2/10:...........\n",
-            "\tloss: 0.5182, acc: 0.8326, val loss: 0.2406, val acc: 0.9384\n",
-            "Epoch 3/10:...........\n",
-            "\tloss: 0.4504, acc: 0.8588, val loss: 0.1948, val acc: 0.9467\n",
-            "Epoch 4/10:...........\n",
-            "\tloss: 0.4360, acc: 0.8628, val loss: 0.2400, val acc: 0.9424\n",
-            "Epoch 5/10:...........\n",
-            "\tloss: 0.4279, acc: 0.8671, val loss: 0.2897, val acc: 0.9182\n",
-            "Epoch 6/10:...........\n",
-            "\tloss: 0.4184, acc: 0.8694, val loss: 0.1810, val acc: 0.9510\n",
-            "Epoch 7/10:...........\n",
-            "\tloss: 0.4182, acc: 0.8688, val loss: 0.2398, val acc: 0.9397\n",
-            "Epoch 8/10:...........\n",
-            "\tloss: 0.4159, acc: 0.8719, val loss: 0.2235, val acc: 0.9474\n",
-            "Epoch 9/10:...........\n",
-            "\tloss: 0.4088, acc: 0.8735, val loss: 0.1883, val acc: 0.9558\n",
-            "Epoch 10/10:...........\n",
-            "\tloss: 0.4118, acc: 0.8734, val loss: 0.1922, val acc: 0.9515\n"
+            "\tloss: 2.3026, acc: 0.1100, val loss: 213.3304, val acc: 0.0980\n"
           ]
         }
       ],
       "source": [
+        "\n",
         "# Train the model for 10 epochs, iterating on the data in batches\n",
-        "n_epochs = 10\n",
+        "n_epochs = 1\n",
         "\n",
         "# store metrics\n",
         "training_accuracy_history = np.zeros([n_epochs, 1])\n",
@@ -317,20 +306,14 @@
       "source": [
         "Above, we output the training loss/accuracy as well as the validation loss and accuracy. Not bad! Let's see if you can do better."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "F_7siE23QkY9"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "set4_prob3.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -347,11 +330,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.4"
-    },
-    "colab": {
-      "name": "set4_prob3.ipynb",
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
