--- a/sets/set4/set4_empty.tex
+++ b/sets/set4/set4_empty.tex
@@ -231,6 +231,7 @@ Look at the sample code to see how to train your model. You can tinker with the 
 
 
 \begin{solution}
+ Link: \url{https://colab.research.google.com/drive/13PwQl0IiCOkUO7fQmlMWK41lryTzhP5L?usp=sharing}
  Final accuracy: 97.77\%
 \end{solution}
 
@@ -240,6 +241,7 @@ Look at the sample code to see how to train your model. You can tinker with the 
  Repeat problem C, except that now you may use 200 hidden units and must build a model with at least 2 hidden layers that achieves test accuracy of at least 0.98.
 
 \begin{solution}
+  Link: \url{https://colab.research.google.com/drive/1mYc1Ygq6XSXtnY1dVsyOnAOgjE9jfqoK?usp=sharing}
   Final accuracy: 98.09\%
 \end{solution}
 
@@ -248,6 +250,7 @@ Look at the sample code to see how to train your model. You can tinker with the 
  Repeat problem C, except that now you may use 1000 hidden units and must build a model with at least 3 hidden layers that achieves test accuracy of at least 0.983.
 
 \begin{solution}
+  Link: \url{https://colab.research.google.com/drive/1Z4H6-bZyVa-9qG6QVCYTkZkb-Wcl-r6E?usp=sharing}
   Final accuracy: 98.45\%
 \end{solution}
 
@@ -486,6 +489,7 @@ Do you foresee any problem with this way of validating our hyperparameters? If s
   \end{itemize}
 \end{itemize}
 \begin{solution}
+  Link: \url{https://colab.research.google.com/drive/1NIoYsNyDh3H1G0Pda8d_nn26Ayfap4Ch?usp=sharing}
   The following test accuracies were obtained for different dropouts:
 
     \begin{center}
